# sawyer_oscr

./: .gitignore  CMakeLists.txt  package.xml
config/: sawyer-gui.rviz  sawyer.rviz
launch/: display.launch  display_gui.launch  gz_sawyer_table.launch  gz_sawyer_table2.launch  gz_table_block.launch  gz_table_blocks.launch
scripts/: goto_initial  model_parse  motion_gz_blocks  motion_ns  sawyer_gz_motion  sawyer_model  sawyer_motion  sawyer_robot.py
scripts/crop/: changeback.m  cropimg.m
scripts/gazebo/: table_block_world.py  table_blocks_world.py
scripts/plots/: plot_gz.py  plot_ns.py
urdf/: sawyer.urdf
urdf/blocks/: block2.urdf  block3.urdf
